# rcai

./: Cargo.toml
examples/: analyze.rs  buildcache.rs  simple.rs
src/: core.rs  lib.rs  sentence.rs  text.rs  text_processing.rs  uuid.rs  wordnet.rs
tests/: base.rs
