[package]
name = "rcai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = "1"
serde_derive = "1"
wn-parser = { git = "https://github.com/fschutt/wn-parser", rev = "0d858a652b3705ebe2db62c8f9a34c03cd85e160" }

[build-dependencies]
serde_json = "1"
serde = "1"
serde_derive = "1"